@@ -30,8 +30,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
 				<configuration>
-					<release>18</release>  
-					<compilerArgs>--enable-preview</compilerArgs>
+					<release>18</release>
+					<!-- JDK 18 don´t support preview feature: insert minus-minus before the flag
+					<compilerArgs>enable-preview</compilerArgs>
+					-->
 					<encoding>UTF-8</encoding>
 					<source>18</source>
 					<target>18</target>
